# eFLL-Reborn

./: .clang-tidy  .cmake-format.yaml  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
cmake/: AddCMakeTools.cmake  CodeCoverage.cmake
cmake/clang/: ClangFormat.cmake  ClangTidy.cmake
cmake/compilers/: CompilerHelper.cmake  FindMsBuild.cmake
cmake/toolchains/gcc/: find_gcc.cmake  gcc_arm_m33_toolchain.cmake  gcc_arm_m4f_toolchain.cmake  gcc_arm_toolchain.cmake
cmake/toolchains/msvc/: Ninja.cmake  NuGet.cmake  PowerShell.cmake  ToolchainCommon.cmake  VsWhere.cmake  Windows.Clang.toolchain.cmake  Windows.Kits.cmake  Windows.MSVC.toolchain.cmake
include/eFLL/: Fuzzy.h  Fuzzy.hpp  FuzzyComposition.hpp  FuzzyGroup.hpp  FuzzyInput.hpp  FuzzyIo.hpp  FuzzyOutput.hpp  FuzzyRule.hpp  FuzzyRuleAntecedent.hpp  FuzzyRuleConsequent.hpp  FuzzySet.h
src/: CMakeLists.txt  Fuzzy.cpp  FuzzyComposition.cpp  FuzzyIO.cpp  FuzzyInput.cpp  FuzzyOutput.cpp  FuzzyRule.cpp  FuzzyRuleAntecedent.cpp  FuzzyRuleConsequent.cpp  FuzzySet.cpp
tests/: CMakeLists.txt
tests/unit/: CMakeLists.txt  FuzzyTest.cpp  GeneralTest.cpp  RebuildTest.cpp
